--- a/BlazorApp1/Shared/LoginDisplay.razor
+++ b/BlazorApp1/Shared/LoginDisplay.razor
@@ -5,16 +5,16 @@
 <AuthorizeView>
     <Authorized>
         <a href="Identity/Account/Manage/Index">
-            Hello, @context.User.Identity.Name!
+            Bienvenido, @context.User.Identity.Name!
         </a>
         <form action="/Identity/Account/Logout?returnUrl=%2F" method="post">
-            <button class="nav-link btn btn-link" type="submit">Logout</button>
+            <button class="nav-link btn btn-link oi oi-account-logout" type="submit">Cerrar Session</button>
             <input name="__RequestVerificationToken" type="hidden"
                    value="@TokenProvider.XsrfToken">
         </form>
     </Authorized>
     <NotAuthorized>
-        <a href="Identity/Account/Register">Register</a>
-        <a href="Identity/Account/Login">Login</a>
+        <a class="oi oi-inbox" href="Identity/Account/Register">Registrarse</a>
+        <a class="oi oi-account-login" href="Identity/Account/Login">Iniciar Session</a>
     </NotAuthorized>
 </AuthorizeView>
