--- a/BlazorApp1/App.razor
+++ b/BlazorApp1/App.razor
@@ -7,7 +7,7 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <p>Lo siento, No existe la dirección.</p>
         </LayoutView>
     </NotFound>
 </Router>
