--- a/BlazorApp1/Pages/Categorias.razor
+++ b/BlazorApp1/Pages/Categorias.razor
@@ -2,8 +2,12 @@
 @using System.Net.Http
 @using System.Net.Http.Json
 @using BlazorApp1.Data
-@inject HttpClient Http
+@using System.Diagnostics
 
+@inject HttpClient Http
+@inject DialogService DialogService
+
+<RadzenDialog />
 <h3>Categorias</h3>
 <div class="row">
 	<div class="col-12 text-right">
@@ -15,25 +19,81 @@
 	FilterMode="FilterMode.Advanced" AllowPaging="true" PageSize="20" AllowSorting="true"
 			Data="@oRespuesta.Data" TItem="Categoria" ColumnWidth="200px">
 	<Columns>
-		<RadzenGridColumn TItem="Categoria" Property="Idcat" Title="Idcat"/>
+		<RadzenGridColumn TItem="Categoria" Property="Idcat" Title="Idcat" Width="50px" />
 		<RadzenGridColumn TItem="Categoria" Property="Nombre" Title="Nombre"/>
-		<RadzenGridColumn TItem="Categoria" Title="Edit">
+		<RadzenGridColumn TItem="Categoria" Property="Foto" Title="Foto"/>
+		<RadzenGridColumn TItem="Categoria" Title="Edit" Width="50px">
 			<Template Context="Data">
 				
-				<RadzenLink Path=@($"/categoriasform/{Data.Idcat}") Text="Edit" Target="_blank" />
+				@*<RadzenLink Path=@($"/categoriasform/{Data.Idcat}") Text="Edit" Target="_blank" />*@
+				@*<RadzenButton Text=@($"Idcad {Data.Idcat} s") Style="width: 100%;" ButtonStyle="ButtonStyle.Secondary" Click="@((args) =>OpenEdit()" />*@
+					@*<RadzenButton Text="d" Style="width: 100%;" ButtonStyle="ButtonStyle.Secondary" Click=@OpenEdit/>*@
+				@*<a href="Categoriasform/@Data.Idcat">Editar</a>*@
+				@*<RadzenButton Text="" Click=@OpenEdit(Data.Idcat) />*@
+				<RadzenButton Text="" ButtonStyle="ButtonStyle.Secondary" Icon="edit" Click="@((args)=>OpenEdit(Data.Idcat))" />
+
+
 			</Template>
 		 </RadzenGridColumn>
-		<RadzenGridColumn TItem="Categoria" Title="Delete">
+		<RadzenGridColumn TItem="Categoria" Title="Delete" Width="50px">
 			<Template Context="Data">
-				<RadzenLink Path=@($"/eliminarcategoria/{Data.Idcat}") Text="Delete" Target="_blank" />
+				@*<RadzenLink Path=@($"/eliminarcategoria/{Data.Idcat}") Text="Delete" Target="_blank" />*@
+				@*<RadzenButton Text=@($"Idcad {Data.Idcat} s") Style="width: 100%;" ButtonStyle="ButtonStyle.Primary" Click=@OpenDelete />*@
+				@*<RadzenButton ButtonStyle="ButtonStyle.Danger" Icon="close" Click="@((args) =>OpenDelete("mio",Data.Idcat))"/>*@
+				<RadzenButton Text="" ButtonStyle="ButtonStyle.Danger" Icon="close" Click="@((args)=>OpenDelete(Data.Idcat))" />
+				@*<a href="eliminarcategoria/@Data.Idcat">Eliminar</a>*@
 			</Template>
 		</RadzenGridColumn>
 	</Columns>
 </RadzenGrid>
 
 @code {
+
+	//EventConsole console;
 	public string url = "/api/categorias";
 	public Respuesta<List<Categoria>> oRespuesta = new Respuesta<List<Categoria>>();
 	protected override async Task OnInitializedAsync() =>
 		oRespuesta = await Http.GetFromJsonAsync<Data.Respuesta<List<Categoria>>>(url);
+
+	//protected override void OnInitialized()
+	//{
+	//	DialogService.OnOpen += Open;
+	//	DialogService.OnClose += Close;
+	//}
+
+	//public void Dispose()
+	//{
+	//	// The DialogService is a singleton so it is advisable to unsubscribe.
+	//	DialogService.OnOpen -= Open;
+	//	DialogService.OnClose -= Close;
+	//}
+
+	//void Open(string title, Type type, Dictionary<string, object> parameters, DialogOptions options)
+	//{
+	//	//console.Log("Dialog opened");
+	//}
+
+	//void Close(dynamic result)
+	//{
+	//	//console.Log($"Dialog closed");
+	//}
+
+
+	public async Task OpenEdit(int Idc)
+	{
+		
+		Debug.Print(Idc.ToString());
+		var loco = await DialogService.OpenAsync<CategoriasForm>($"Editar Categoria: {Idc}",
+						new Dictionary<string, object>(){ { "Idcat", Idc } },
+						new DialogOptions() { Width = "700px", Height = "370px", Resizable = true, Draggable = true });
+	}
+
+	public async Task OpenDelete(int idc)
+	{
+		Debug.Print("entro");
+		await DialogService.OpenAsync<EliminarCategoria>($"Eliminar Registro: {idc}",
+						new Dictionary<string, object>() { { "Idcat", idc } },
+						new DialogOptions() { Width = "700px", Height = "200px", Draggable = true });
+	}
+	
 }
