--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -13,16 +13,7 @@
             </NavLink>
         </li>
         <AuthorizeView>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
+       
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="noticias">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Noticias
@@ -30,13 +21,13 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="categorias">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Categorias
+                    <span class="oi oi-layers" aria-hidden="true"></span> Categorias
             </NavLink>
         </li>
 
             <li class="nav-item px-3">
-                <NavLink class="nav-link" href="admnews">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> User Manager
+                <NavLink class="nav-link" href="/identity/account/manage">
+                    <span class="oi oi-people" aria-hidden="true"></span> User Manager
                 </NavLink>
             </li>
         </AuthorizeView>
